test/functions/intents/out/split-init-out-formal-no-type-used.good
split-init-out-formal-no-type-used.chpl:2: In function 'f':
split-init-out-formal-no-type-used.chpl:2: error: variable 'arg' is not initialized and has no type
split-init-out-formal-no-type-used.chpl:3: note: 'arg' use here prevents split-init from establishing the type
